Update logo image and enhance styles for registration section, including improved background gradients and hover effects.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="hero-content">
           <img
             class="hero-logo"
-            src="Logos/Avurudu LCM '25/logo.png"
+            src="Logos/Avurudu LCM '25/Avurdu_LCM_white.png"
             alt="Avurudu LCM '25 Logo"
           />
           <h1>Avurudu LCM '25</h1>
