Update Google Form embed URL in index.html

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="registration-iframe-container">
                 <iframe
                      id="google-form"
-                     src="YOUR_GOOGLE_FORM_EMBED_URL_HERE"  <!-- === REPLACE with your actual Google Form embed URL === -->
+                     src="https://forms.gle/q6fvKgh3XrWjJyVb6"  <!-- === REPLACE with your actual Google Form embed URL === -->
                      frameborder="0"
                      aria-label="Registration Form"
                      >Loading…</iframe
