Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       <div class="container">
         <div class="logo">
           <img src="Logos/AIESEC/Black-Logo.png" alt="AIESEC Logo" />
-          <h1>Avurudu LCM '25</h1>
         </div>
         <nav>
           <ul>
@@ -118,112 +117,215 @@
           <!-- Timeline Items with Icons -->
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-sign-in-alt icon"></i> 9:00 AM
+              <i class="fas fa-sign-in-alt icon"></i> 8:00 AM
             </div>
             <div class="event">
-              <h3>Arrival & Registration</h3>
-              <p>Welcome registration of participants.</p>
+              <h3>Arrival & Registration Time for Delegates</h3>
+              <p>Welcome and registration of participants</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-landmark icon"></i> 9:30 - 10:00 AM
-            </div>
-            <div class="event">
-              <h3>Opening Ceremony</h3>
-              <p>Traditional Kiri Ithirima & Oil Lamp Lighting.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="time">
-              <i class="fas fa-microphone icon"></i> 10:00 - 10:20 AM
+              <i class="fas fa-microphone icon"></i> 9:00 - 9:10 AM
             </div>
             <div class="event">
               <h3>Welcome Speech</h3>
-              <p>Welcome address by the Local Committee President.</p>
+              <p>Welcome address by LCP - Savindu</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-award icon"></i> 10:20 - 10:30 AM
+              <i class="fas fa-award icon"></i> 9:10 - 10:30 AM
             </div>
             <div class="event">
-              <h3>Appreciation Ceremony</h3>
-              <p>Recognition of Members of the Month.</p>
+              <h3>LCM & Appreciation Ceremony</h3>
+              <p>Recognition of Members of the Month and Jives</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-music icon"></i> 10:30 - 10:45 AM
+              <i class="fas fa-users icon"></i> 10:30 - 10:45 AM
             </div>
             <div class="event">
-              <h3>Jives</h3>
-              <p>Get energized with a fun dance session!</p>
+              <h3>Arrival at Ground</h3>
+              <p>Moving to the event grounds with delegates</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-utensils icon"></i> 10:45 - 11:30 AM
+              <i class="fas fa-landmark icon"></i> 10:45 - 11:15 AM
             </div>
             <div class="event">
-              <h3>Avurudu Kama Mesaya</h3>
-              <p>Indulge in a traditional New Year feast.</p>
+              <h3>Opening Ceremony</h3>
+              <p>Traditional Kiri ithirima & Polthel pahana ceremony</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-gamepad icon"></i> 11:30 AM - 12:50 PM
+              <i class="fas fa-utensils icon"></i> 11:15 - 11:45 AM
             </div>
             <div class="event">
-              <h3>Avurudu Games - Part 1</h3>
-              <p>Exciting traditional games session.</p>
+              <h3>Avurudu Kama Mese</h3>
+              <p>Traditional New Year feast and refreshments</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-fist-raised icon"></i> 12:50 PM - 2:40 PM
+              <i class="fas fa-music icon"></i> 11:45 - 11:55 AM
             </div>
             <div class="event">
-              <h3>Avurudu Games - Part 2</h3>
+              <h3>Dancing Session 1</h3>
+              <p>First traditional dance performance</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-users icon"></i> 11:55 - 12:00 PM
+            </div>
+            <div class="event">
+              <h3>Team Formation</h3>
+              <p>Divide members into teams according to delegate tags</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-running icon"></i> 12:00 - 12:20 PM
+            </div>
+            <div class="event">
+              <h3>Game 1: Three-Legged Balloon Race</h3>
               <p>
-                More games including Tug of War & Avurudu Kumaraya/Kumariya.
+                Teams compete in three-legged race while keeping balloons from
+                falling
               </p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-puzzle-piece icon"></i> 2:40 PM - 3:00 PM
+              <i class="fas fa-gamepad icon"></i> 12:20 - 12:45 PM
             </div>
             <div class="event">
-              <h3>Fun Break & Activities</h3>
-              <p>Engaging activities and short break.</p>
+              <h3>Game 2: Polo and Toothpick</h3>
+              <p>Whole team coordination game</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-users icon"></i> 3:00 - 3:30 PM
+              <i class="fas fa-microphone-alt icon"></i> 12:45 - 12:55 PM
             </div>
             <div class="event">
-              <h3>Pani Bambare</h3>
-              <p>Traditional game signifying unity and teamwork.</p>
+              <h3>Singing Session 1</h3>
+              <p>First musical performance</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-trophy icon"></i> 3:30 - 4:30 PM
+              <i class="fas fa-crown icon"></i> 12:55 - 1:00 PM
             </div>
             <div class="event">
-              <h3>Closing & Awards</h3>
-              <p>Avurudu Kumaraya/Kumariya crowning & prize distribution.</p>
+              <h3>Avurudu Kumara & Kumariya</h3>
+              <p>Nominations opening announcement</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="time">
-              <i class="fas fa-handshake icon"></i> 4:30 - 5:00 PM
+              <i class="fas fa-people-carry icon"></i> 1:00 - 1:45 PM
             </div>
             <div class="event">
-              <h3>Vote of Thanks & Final Jives</h3>
-              <p>Closing remarks and final celebratory dances.</p>
+              <h3>Game 3: Tug of War</h3>
+              <p>EB Volans vs. EB Hashira</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-music icon"></i> 1:45 - 1:55 PM
+            </div>
+            <div class="event">
+              <h3>Dancing Session 2</h3>
+              <p>Dance Performance</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-flag-checkered icon"></i> 1:55 - 2:35 PM
+            </div>
+            <div class="event">
+              <h3>Game 4: Obstacle Race</h3>
+              <p>
+                Multiple challenges including lemon-in-spoon race, sack race,
+                and more
+              </p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-water icon"></i> 2:35 - 2:55 PM
+            </div>
+            <div class="event">
+              <h3>Game 5: Catching Water Balloons</h3>
+              <p>Team coordination water balloon challenge</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-microphone-alt icon"></i> 2:55 - 3:05 PM
+            </div>
+            <div class="event">
+              <h3>Singing Session 2</h3>
+              <p>Second musical performance</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-tshirt icon"></i> 3:05 - 3:20 PM
+            </div>
+            <div class="event">
+              <h3>Game 6: Saree Game</h3>
+              <p>Traditional attire competition</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-sync-alt icon"></i> 3:20 - 4:00 PM
+            </div>
+            <div class="event">
+              <h3>Game 7: Pani Bambare</h3>
+              <p>Traditional spinning game signifying unity and teamwork</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-crown icon"></i> 4:00 - 4:30 PM
+            </div>
+            <div class="event">
+              <h3>Avurudu Kumara & Kumariya Winners</h3>
+              <p>Announcement of the winners</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-trophy icon"></i> 4:30 - 5:00 PM
+            </div>
+            <div class="event">
+              <h3>Prize Distribution</h3>
+              <p>Awards ceremony for all competitions</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-heart icon"></i> 5:00 - 5:10 PM
+            </div>
+            <div class="event">
+              <h3>Vote of Thanks</h3>
+              <p>Thank you speech</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="time">
+              <i class="fas fa-music icon"></i> 5:10 - 5:30 PM
+            </div>
+            <div class="event">
+              <h3>Final Jives</h3>
+              <p>Closing celebration dances</p>
             </div>
           </div>
         </div>
@@ -235,47 +337,52 @@
       <div class="container">
         <h2 class="section-title">Avurudu Nakath Times 2025</h2>
         <p class="nakath-subtitle">
-          Auspicious times for the Sinhala & Tamil New Year (Official 2025 Times
-          Pending - Example Below)
+          Auspicious times for the Sinhala & Tamil New Year celebrations
         </p>
         <div class="nakath-grid">
           <div class="nakath-card">
-            <i class="fas fa-stopwatch nakath-icon"></i>
-            <h3>Punya Kalaya Begins</h3>
-            <p class="time">April 13, Evening</p>
-            <p class="description">
-              Transitional period for religious observances.
-            </p>
+            <i class="fas fa-bath nakath-icon"></i>
+            <h3>Ritual Bath for the Old Year</h3>
+            <p class="time">Sunday, April 13</p>
+            <p class="description">පරණ අවුරුද්ද සඳහා ස්නානය</p>
           </div>
           <div class="nakath-card">
             <i class="fas fa-sun nakath-icon"></i>
-            <h3>Aluth Avurudu Udawa</h3>
-            <p class="time">April 14, Morning</p>
-            <p class="description">Sinhala & Tamil New Year dawns.</p>
+            <h3>Dawn of the New Year</h3>
+            <p class="time">Monday, April 14 at 3:21 AM</p>
+            <p class="description">අලුත් අවුරුද්ද උදාව</p>
+          </div>
+          <div class="nakath-card">
+            <i class="fas fa-hourglass-half nakath-icon"></i>
+            <h3>Punya Kalaya (Neutral Period)</h3>
+            <p class="time">
+              Sunday, April 13 at 8:57 PM to Monday, April 14 at 9:45 AM
+            </p>
+            <p class="description">පුණ්‍ය කාලය</p>
           </div>
           <div class="nakath-card">
             <i class="fas fa-fire nakath-icon"></i>
-            <h3>Lighting the Hearth</h3>
-            <p class="time">April 14, Morning</p>
-            <p class="description">Auspicious time to light the hearth.</p>
+            <h3>Preparation of the First Meal</h3>
+            <p class="time">Monday, April 14 at 4:04 AM</p>
+            <p class="description">ආහාර පිසීම</p>
+          </div>
+          <div class="nakath-card">
+            <i class="fas fa-handshake nakath-icon"></i>
+            <h3>Starting Work & Transactions</h3>
+            <p class="time">Monday, April 14 at 6:44 AM</p>
+            <p class="description">වැඩ ඇල්ලීම, ගණුදෙනු කිරීම හා ආහාර අනුභවය</p>
+          </div>
+          <div class="nakath-card">
+            <i class="fas fa-tint nakath-icon"></i>
+            <h3>Anointing of Oil</h3>
+            <p class="time">Wednesday, April 16 at 9:04 AM</p>
+            <p class="description">හිසතෙල් ගෑම</p>
           </div>
           <div class="nakath-card">
             <i class="fas fa-briefcase nakath-icon"></i>
-            <h3>First Transactions</h3>
-            <p class="time">April 14, Morning</p>
-            <p class="description">Commencing work & Ganu Denu.</p>
-          </div>
-          <div class="nakath-card">
-            <i class="fas fa-utensils nakath-icon"></i>
-            <h3>First Meal</h3>
-            <p class="time">April 14, Morning</p>
-            <p class="description">Partaking of the first meal together.</p>
-          </div>
-          <div class="nakath-card">
-            <i class="fas fa-hand-holding-medical nakath-icon"></i>
-            <h3>Anointing Oil</h3>
-            <p class="time">April 16 (Check Date)</p>
-            <p class="description">Hisa Thel Gama ceremony.</p>
+            <h3>Leaving for Work in New Year</h3>
+            <p class="time">Thursday, April 17 at 9:03 AM</p>
+            <p class="description">රැකී රක්ෂා සඳහා පිටත්ව යාම</p>
           </div>
         </div>
       </div>
@@ -569,7 +676,7 @@
           </div>
           <div class="oc-card">
             <img
-              src="images/oc/Tharuka.jpg"
+              src="images/oc/Tharuka.jpeg"
               alt="Tharuka Gunarathne Profile"
               class="oc-img"
               loading="lazy"
@@ -699,7 +806,7 @@
           <!-- OCVP LOGI -->
           <div class="oc-card">
             <img
-              src="images/oc/Krishwin.jpg"
+              src="images/oc/Krishwinthan.jpg"
               alt="Krishiwnthan Gobinath Profile"
               class="oc-img"
               loading="lazy"
