Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
           </div>
           <div class="oc-card">
             <img
-              src="images/oc/Tharuka.jpeg"
+              src="images/oc/Tharuka.jpg"
               alt="Tharuka Gunarathne Profile"
               class="oc-img"
               loading="lazy"
